# embedded-micropython-cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_shared_lib.sh  build_static_lib.sh  micropython_embed.mk  mpconfigport.h
